2012-07-13  WOnder93  <omosnacek@gmail.com>

	* Widget.cs:
	  Properly calculate intersection of two rectangles.

	* AssemblyInfo.cs:
	  Updated the assembly version.

2012-07-08  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* AnimationLayer.cs:
	  Animate end of game (reveal roles).

	* CardWidget.cs:
	  Don't scale down too much in ApplyConstriction(Context) to
	  avoid Cairo errors on Windows.

2012-06-30  WOnder93  <omosnacek@gmail.com>

	* Animation.cs:
	* AllocationManager.cs:
	  Remove animated deck cards if at the end of the animation.

	* AnimationLayer.cs:
	  Improved the RootWidget's RequestRedraw() and
	  RequestResize() methods and their usage.

	* RootWidget.cs:
	  Improved the RootWidget's RequestRedraw() and
	  RequestResize() methods and their usage.
	Add the RootWidget's event listener after the AnimationLayer's
	  to the main listener.

	* AssemblyInfo.cs:
	  Upated the assembly version.

2012-06-25  WOnder93  <omosnacek@gmail.com>

	* ConnectionManager.cs:
	* Widget.cs:
	* RootWidget.cs:
	* AnimationLayer.cs:
	  Removed event locks - replaced by layout lock in client.

	* AssemblyInfo.cs:
	  Updated the assembly version.

2012-06-25  WOnder93  <omosnacek@gmail.com>

	* MainTableWidget.Layout.cs:
	  Fixed improper padding in MainTableWidget.

	* PlayerSlotWidget.Layout.cs:
	  Added rounding to PlayerSlotWidget.

	* SolidColor.cs:
	  Added rounding option to SolidColor.

	* AssemblyInfo.cs:
	  Updated the assembly version.

2012-06-15  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Updated the assembly version.

	* AnimationLayer.cs:
	  Clear AnimationLayer when the session has ended.

	* RootWidget.cs:
	  Clear also responseLabel's text when clearing RootWidget.

2012-06-15  WOnder93  <omosnacek@gmail.com>

	* RootWidget.cs:
	  Properly update RootWidget according to session, not game.
	Set displayed request type to None when another player is
	  requested.

	* AssemblyInfo.cs: