@@ -1,3 +1,12 @@
+2012-07-23  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  Updated the assembly version.
+
+	* Main.cs:
+	  Added missing change intended for revision 112, which caused
+	  Bang# Client to fail to build.
+
 2012-07-13  WOnder93  <omosnacek@gmail.com>
 
 	* Widget.cs:
